update app layout to add navbar

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>ProjectList</title>
+    <title>Project List</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
@@ -9,8 +9,20 @@
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
+  
+  <nav><center>
+    <a href="/">Home</a>|
+    <a href="/projects">View Projects</a>|
+    <a href="/signup">Sign Up</a>|
+    <a href="/login">Log In</a>|
+    <a href="/logout">Log Out</a>
+  </center></nav>
+
+
+  <style></style>
 
   <body>
     <%= yield %>
   </body>
+
 </html>
